--- a/index.html
+++ b/index.html
@@ -9,84 +9,34 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
- 
- <body>
+
+  <body>
     <!-- ======= 1-Desktop Navigation Bar HERE ======= -->
-<nav id="desktop-nav">
-  <div class="logo">John Doe</div>
-  <div>
-    <ul class="nav-links">
-      <li><a href="#about">About</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </div>
-</nav>
-
-
-
-
+    <nav id="desktop-nav">
+      <div class="logo">John Doe</div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="#experience">ggg</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
 
     <!-- ======= 2-Mobile Navigation Bar HERE ======= -->
 
-
-
-
-
-
-
     <!-- ======= 3-Profile Section HERE ======= -->
-
-
-
-
-
-
 
     <!-- ======= 4-About Section HERE ======= -->
 
-
-
-
-
-
-
     <!-- ======= 5-Experiance Section HERE ======= -->
-
-
-
-
-
-
 
     <!-- ======= 6-Projects Section HERE ======= -->
 
-
-
-
-
-
-
     <!-- ======= 7-Contact Section HERE ======= -->
 
-
-
-    
-
-
-
     <!-- ======= 8-Footer HERE ======= -->
-  
-
-
-
-
-
-
 
     <script src="script.js"></script>
- </body>
-
-
+  </body>
 </html>
